jira/06-postgresql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: jira
  labels:
    app: postgres
    type: statefulset
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      type: pod
  template:
    metadata:
      labels:
        app: postgres
        type: pod
    spec:
      containers:
      - name: postgres
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: db
