jira/10-jira-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jira
  namespace: jira
  labels:
    app: jira
    type: statefulset
spec:
  serviceName: "jira"
  replicas: 1
  selector:
    matchLabels:
      app: jira
      type: pod      
  template:
    metadata:
      labels:
        app: jira
        type: pod
    spec:
      containers:
      - name: jira
        image: atlassian/jira-software:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/var/atlassian/application-data/jira"
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
