jira/11-jira-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
  namespace: jira
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8m"
spec:
  tls:
  - hosts:
      - "jira.domain.tld"
    secretName: "jira-tls"
  rules:
  - host: "jira.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "jira"
            port:
              number: 8080
